fixed menu not opening on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -407,6 +407,7 @@ footer .container {
   }
 
   .active {
+    display: flex;
     transform: translateX(0%);
   }
 
